--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -34,13 +34,13 @@
 </view>
 <view class="VerticalBox" wx:else>
   <scroll-view class="VerticalNav nav" scroll-y scroll-with-animation scroll-top="{{VerticalNavTop}}">
-    <view class="cu-item {{index==TabCur?'cur':''}}" wx:for="{{list}}" wx:key bindtap='tabSelect' data-id="{{index}}">
+    <view class="cu-item {{index==TabCur?'cur':''}}" wx:for="{{list}}" wx:key="index" bindtap="tabSelect" data-id="{{index}}">
       {{item.name}}
     </view>
     <view style="height: 120rpx"></view>
   </scroll-view>
   <scroll-view class="VerticalMain" scroll-y scroll-with-animation scroll-into-view="main-{{MainCur}}" bindscroll="VerticalMain">
-    <view class="type-container {{index === list.length - 1 && 'last-view'}}" wx:for="{{list}}" wx:key id="main-{{index}}">
+    <view class="type-container {{index === list.length - 1 && 'last-view'}}" wx:for="{{list}}" wx:key="index" id="main-{{index}}">
       <view class="type-box">
         <view class="type-name">
           <text class="cuIcon-title"></text>
