--- a/pages/order-detail/index.wxml
+++ b/pages/order-detail/index.wxml
@@ -52,7 +52,7 @@
   />
 </block>
 <view class="good-box {{isIpx && orderInfo.state !== 4 && 'good-box-iphonex'}}">
-  <view class="good-item" wx:for="{{orderList}}" wx:key>
+  <view class="good-item" wx:for="{{orderList}}" wx:key="index">
     <image src="{{item.coverImg}}" mode="aspectFill" bindtap="viewImg" data-item="{{item.coverImg}}" />
     <view class="good-info">
       <view class="good-name">{{item.name}}</view>
