--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -1,11 +1,10 @@
 
 .good-box{
-  padding: 20rpx 15rpx 110rpx;
+  padding: 20rpx 0 110rpx;
 }
 
 .good-item{
   background: #fff;
-  border-radius: 10rpx;
   padding: 20rpx;
   margin-bottom: 20rpx;
   display: flex;
