--- a/pages/shop/index.wxss
+++ b/pages/shop/index.wxss
@@ -1,11 +1,10 @@
 
 .good-box{
-  padding: 20rpx 15rpx 110rpx;
+  padding: 20rpx 0 110rpx;
 }
 
 .good-item{
   background: #fff;
-  border-radius: 10rpx;
   padding: 20rpx;
   margin-bottom: 20rpx;
   display: flex;
@@ -89,7 +88,7 @@
   font-size: 26rpx;
   background: coral;
   padding: 15rpx 20rpx;
-  border-radius: 10rpx;
+  border-radius: 5rpx;
   margin-left: 20rpx;
 }
 
