--- a/miniprogram_npm/vant-weapp/submit-bar/index.wxml
+++ b/miniprogram_npm/vant-weapp/submit-bar/index.wxml
@@ -34,7 +34,7 @@
       disabled="{{ disabled }}"
       class="van-submit-bar__button"
       custom-class="button-class"
-      bind:click="onSubmit"
+      catchtap="onSubmit"
     >
       {{ loading ? '' : buttonText }}
     </van-button>
