--- a/pages/shop-inner/index.wxss
+++ b/pages/shop-inner/index.wxss
@@ -51,6 +51,10 @@
 
 .good-info{
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10rpx 0;
 }
 
 .good-name{
